updated help output for throne

--- a/docs/throne.mdx
+++ b/docs/throne.mdx
@@ -18,9 +18,9 @@ Options:
   --help         Show this message and exit.
 
 Commands:
-  abuse  Gets abuse information for the specified IP, prefix or ASN.
-  bgp    Retrieve BGP related information.
-  ip     Retrieve IP related information.
+  bgp  Retrieve BGP related information.
+  ip   Retrieve IP related information.
+  pdb  Retrieve information from PeeringDB.
 ```
 
 ## Options
