updated example for --all

--- a/docs/ip.mdx
+++ b/docs/ip.mdx
@@ -110,7 +110,7 @@ This output looks fairly similar to the output for `throne bgp asn` but provides
 Now lets take a look at what we get when we specify the `-a` or `--all` option.
 
 ```bash Title="Example - --all"
-[root@uswiauto01 ProjectThrone]# throne ip info 1.1.1.1 --all
+[user@throne ~]$ throne ip info 1.1.1.1 --all
 ---IP Info---
 Issued By: APNIC
 Status: ASSIGNED PORTABLE
