--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -33,3 +33,5 @@ multiple different sources and presents the information you're looking for in on
 - [PeeringDB](https://www.peeringdb.com/apidocs/)
 - [ip-api](https://ip-api.com/)
 - [Shodan](https://developer.shodan.io/api/introduction)
+- [IANA RDAP](https://www.iana.org/help/rdap-requirements)
+- [throne API](/docs/throne-api)
