--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -10,7 +10,7 @@ import styles from "./.styles.module.css";
 
 ### The Clear BSD License
 
-Copyright © <Datetime className={styles.year} year/> Dakota Gartley/Throne
+Copyright © <Datetime className={styles.year} year/> Throne, LLC
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
