adds link for POST request

--- a/docs/api/api.mdx
+++ b/docs/api/api.mdx
@@ -12,7 +12,7 @@ All API queries will need to be sent to `api.throne.dev`. All API requests requi
 A list of our endpoints are below:
 ### Authentication
 * [GET - `/auth/login`](https://api.throne.dev/auth/login)
-* POST - /auth/login
+* [POST - `/auth/login`](/docs/api/authentication)
 
 ### WHOIS Queries
 * [GET - `/whois/asn`](/docs/api/asn)
