adds prism highlighting to api docs

--- a/docs/api/asn.mdx
+++ b/docs/api/asn.mdx
@@ -17,7 +17,7 @@ The results returned from the throne ASN API will be returned in a format that s
 
 Endpoint: `https://api.throne.dev/whois/asn?query=69`
 
-```title=Example - ASN Query - 69
+```json title=Example - ASN Query - 69
 {
   "rir": "ARIN",
   "name": "UPENN-ANYCAST",
