--- a/docs/api/whois.mdx
+++ b/docs/api/whois.mdx
@@ -17,7 +17,7 @@ The results returned from the throne WHOIS API will be returned in a format that
 
 Endpoint: `https://api.throne.dev/whois/domain?query=amazon.com`
 
-```title=Example - Domain Query - amazon.com
+```json title=Example - Domain Query - amazon.com
 {
     "handle": "281209_DOMAIN_COM-VRSN",
     "domain": "amazon.com",
