fixes random broken link

--- a/docs/cli/whois.mdx
+++ b/docs/cli/whois.mdx
@@ -5,7 +5,7 @@ sidebar_label: throne whois
 description: Using the WHOIS module within throne
 ---
 
-Excited to announce that the throne WHOIS module is powered by the [throne API](/docs/api/api)! The throne API is leveraging RDAP resources from various registrars and IANA to provide the proper readable format to the user. RDAP in my opinion is a horrible "protocol", the whole vCardArray thing is absurd.
+Excited to announce that the throne WHOIS module is powered by the [throne API](/docs/api)! The throne API is leveraging RDAP resources from various registrars and IANA to provide the proper readable format to the user. RDAP in my opinion is a horrible "protocol", the whole vCardArray thing is absurd.
 
 Using the WHOIS module is very simple, `throne whois domain` is what you will put before your query. Your query can be any domain that you wish to get the WHOIS information for. throne will return the domain, any associated statuses, nameservers, DNSSEC status, contact information and registration information.
 
