--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -34,4 +34,4 @@ multiple different sources and presents the information you're looking for in on
 - [ip-api](https://ip-api.com/)
 - [Shodan](https://developer.shodan.io/api/introduction)
 - [IANA RDAP](https://www.iana.org/help/rdap-requirements)
-- [throne API](/docs/api/api)
+- [throne API](/docs/api)
