changes setapi to set

--- a/docs/cli/api.mdx
+++ b/docs/cli/api.mdx
@@ -19,12 +19,13 @@ Options:
   --help  Show this message and exit.
 
 Commands:
-  setapi  Use this command to login to the throne API and set your API key
+  get  Use this command to get your username to the throne API.
+  set  Use this command to login to the throne API and set your API key
 ```
 
-### api setapi
+### api set
 
-Using `throne api setapi` you can retrieve your key from our authentication servers. This is in the form of a Bearer token, this command will automatically create our config file and set your Bearer token within the file.
+Using `throne api set` you can retrieve your key from our authentication servers. This is in the form of a Bearer token, this command will automatically create our config file and set your Bearer token within the file.
 
 You may run this command directly and be prompted for credentials OR you can use options. See both examples below.
 
@@ -33,7 +34,7 @@ As of this addition (10/15/21), you will need to re-run this command every 30 da
 :::
 
 ```bash title="Prompt"
-[user@throne ~]$ throne api setapi
+[user@throne ~]$ throne api set
 Username: testuser@throne.dev
 Password: 
 Do you wish to set a scope? (Y/N): N
@@ -45,7 +46,7 @@ Unless you've already been instructed by our staff to use a scope, always choose
 :::
 
 ```bash title="Options"
-[user@throne ~]$ throne api setapi -u testuser@throne.dev -p Sup3rS3cr3tS3cur3P@55w0rd!
+[user@throne ~]$ throne api set -u testuser@throne.dev -p Sup3rS3cr3tS3cur3P@55w0rd!
 Successfully set throne API key.
 ```
 
@@ -56,6 +57,7 @@ While using options, if you have a scope it may be set by using the `-s` option.
 As used with the Shodan module, we upon running this command we create a `.throne` folder in your home directory which will contain a config.yml file. This file will contain your throne API key when set as well as your Shodan API key when set (if applicable).
 
 ```YAML title="Example Config File"
+throne_username: test@example.com
 throne_key: Bearer eyJsdfSDFSEfdscvsdvw243rfdadsJ9eyJpc3MiOiJodHRwczovL3Rocm9uZS1wcm9kLnVzLmF1dGgwLmNvbS8iLCJzdWIiOiJhdXRoMHw2MTI3YjE1YjhmYzRiYTAwNzFDExN2EiLCJhdWQiOiJodHRwczovL2FwaS50aHJvbmUuZGV2IiwiaWF0IjoxNjMwNDMxNTAxLCJl
 shodan_key: XXXXXXXXXsdfsdwererw23123dsfzxc
 ```
