updates throne output on getting started page

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -113,7 +113,10 @@ Options:
   --help         Show this message and exit.
 
 Commands:
-  abuse  Gets abuse information for the specified IP, prefix or ASN.
-  bgp    Retrieve BGP related information.
-  ip     Retrieve IP related information.
+  api     Retrieve API keys from the throne API
+  bgp     Retrieve BGP related information.
+  ip      Retrieve IP related information.
+  pdb     Retrieve information from PeeringDB.
+  shodan  Retrieve information from Shodan.
+  whois   Retrieve WHOIS information on domains.
 ```
