updates throne output on throne page

--- a/docs/cli/throne.mdx
+++ b/docs/cli/throne.mdx
@@ -18,9 +18,12 @@ Options:
   --help         Show this message and exit.
 
 Commands:
-  bgp  Retrieve BGP related information.
-  ip   Retrieve IP related information.
-  pdb  Retrieve information from PeeringDB.
+  api     Retrieve API keys from the throne API
+  bgp     Retrieve BGP related information.
+  ip      Retrieve IP related information.
+  pdb     Retrieve information from PeeringDB.
+  shodan  Retrieve information from Shodan.
+  whois   Retrieve WHOIS information on domains.
 ```
 
 ## Options
