updates output of bgp and pdb

--- a/docs/cli/bgp.mdx
+++ b/docs/cli/bgp.mdx
@@ -19,7 +19,7 @@ Options:
 
 Commands:
   asn     Gets information on the specified AS number.
-  look    BGP looking glass information based upon provided address or...
+  lg      BGP looking glass information based upon provided address or...
   prefix  Gets prefix information for specified prefix or ip address.
 ```
 
